--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "MathCL"
+name = "mathcl"
 version = "0.0.1"
 edition = "2021"
 authors = ["Maurício Paiva da Silva <mauriciopaiva.matematica@gmail.com>"]
